Nouveaux Commit, ajoutant les defis personnel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <mat-toolbar>
   <a href="https://www.linkedin.com/in/guillaume-lechevallier/">
   <img src="https://i.ibb.co/FKfDD6H/photo-cv.png" alt="photo de guillaume" class="photolinkedin"></a>
-  <p class="titre">Lechevallier Guillaume</p>
+  <div class="margintest"><p class="titre">Lechevallier Guillaume</p><p class="explication">Informaticien/Développeur</p></div>
 
   <mat-icon aria-hiden="false" color="white">build</mat-icon>
   <p class="siteencoursdedev">Site en cours de développement</p>
@@ -17,6 +17,7 @@
   <mat-tab label="Réalisation"> <app-projetspersonnel></app-projetspersonnel> </mat-tab>
   <mat-tab label="Information complémentaire et liens"> <app-infocomplementaire></app-infocomplementaire> </mat-tab>
   <mat-tab label="Contactez moi !"> <app-contactezmoi></app-contactezmoi> </mat-tab>
+  <mat-tab label="Defis personnel !"> <app-defispersonnel></app-defispersonnel> </mat-tab>
 </mat-tab-group>
 <mat-toolbar>
 
