--- a/src/app/contactezmoi/contactezmoi.component.html
+++ b/src/app/contactezmoi/contactezmoi.component.html
@@ -1,4 +1,5 @@
 <br><br>
+<p class="grostitre">Formulaire de contact</p>
 <form class="formulairecontact">
   <mat-form-field class="mail">
     <mat-label>Votre adresse mail</mat-label>
